k8s/django/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: autoserviceadm/automaster:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: media-data
              mountPath: /code/media
      volumes:
        - name: media-data
          persistentVolumeClaim:
            claimName: django-media
